--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- Latest compiled and minified CSS -->
 
-    <title>Offical Portfolio of Matt Grossman</title>
+    <title>Official Portfolio of Matt Grossman</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
