--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <meta charset="utf-8" />
@@ -27,7 +26,7 @@
 
     <!-- Latest compiled and minified CSS -->
 
-    <title>Official Portfolio of Matt Grossman</title>
+    <title>Official Portfolio of Matthew Grossman</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
