--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
     <!-- Latest compiled and minified CSS -->
 
-    <title>Official Portfolio of Matthew qGrossman</title>
+    <title>Official Portfolio of Matthew Grossman</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
